--- a/Camara2/app/src/main/res/layout/activity_main.xml
+++ b/Camara2/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright 2016 Keval Patel.
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -15,8 +14,7 @@
   ~ limitations under the License.
   -->
 
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
@@ -26,29 +24,12 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.kevalpatel2106.sample.MainActivity">
-
-    <Button
-        android:id="@+id/btn_using_activity"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Using activity"/>
-
-    <Button
-        android:id="@+id/btn_using_fragment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Using fragment"/>
+    tools:context=".MainActivity">
 
     <Button
         android:id="@+id/btn_using_service"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Using service"/>
-
-    <FrameLayout
-        android:id="@+id/fragment_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:text="@string/title_button_service" />
 
 </LinearLayout>
