--- a/Camara2/app/src/main/res/values/arrays.xml
+++ b/Camara2/app/src/main/res/values/arrays.xml
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="nivel_bateria">
-        <item>40%</item>
+        <item>50%</item>
         <item>30%</item>
         <item>20%</item>
     </string-array>
     <string-array name="nivel_bateria_values">
-        <item>40%</item>
-        <item>30%</item>
-        <item>20%</item>
+        <item>50</item>
+        <item>30</item>
+        <item>20</item>
     </string-array>
     <string-array name="frecuencia_fotos">
         <item>15s</item>
+        <item>30s</item>
         <item>1min</item>
-        <item>4min</item>
     </string-array>
     <string-array name="frecuencia_fotos_values">
-        <item>15s</item>
-        <item>1min</item>
-        <item>4min</item>
+        <item>15</item>
+        <item>30</item>
+        <item>60</item>
     </string-array>
     <string-array name="memoria">
         <item>16GB</item>
