--- a/Camara2/app/src/main/res/layout/activity_main.xml
+++ b/Camara2/app/src/main/res/layout/activity_main.xml
@@ -32,79 +32,16 @@
         android:layout_height="wrap_content"
         android:text="@string/title_button_service" />
 
-    <TextView
-        android:id="@+id/text_view_title_preferencias"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/btn_using_service"
-        android:layout_marginTop="50dp"
-        android:text="@string/title_preferencias"
-        android:textAppearance="@style/TextAppearance.AppCompat.Button" />
 
     <TextView
-        android:id="@+id/text_view_bat_frec"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/text_view_title_preferencias"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:text="@string/title_bateria_frecuencia"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-        android:textColor="@color/colorAccent" />
-
-
-    <TextView
-        android:id="@+id/text_view_bateria"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/text_view_bat_frec"
-        android:layout_marginLeft="@dimen/margin_left"
-        android:text="@string/title_bateria" />
-
-    <TextView
-        android:id="@+id/text_view_frecuencia"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/text_view_bateria"
-        android:layout_marginLeft="@dimen/margin_left"
-        android:text="@string/title_frecuencia" />
-
-
-    <TextView
-        android:id="@+id/text_view_mem_cal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/text_view_frecuencia"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:text="@string/title_memoria_calidad"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-        android:textColor="@color/colorAccent" />
-
-
-    <TextView
-        android:id="@+id/text_view_memoria"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/text_view_mem_cal"
-        android:layout_marginLeft="@dimen/margin_left"
-        android:text="@string/title_memoria" />
-
-    <TextView
-        android:id="@+id/text_view_calidad"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/text_view_memoria"
-        android:layout_marginLeft="@dimen/margin_left"
-        android:text="@string/title_calidad" />
-
-    <TextView
-        android:text=""
+        android:id="@+id/estado_servicio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/text_view_calidad"
         android:layout_alignParentStart="true"
+        android:layout_below="@+id/btn_using_service"
         android:layout_marginTop="48dp"
-        android:textSize="20dp"
-        android:id="@+id/estado_servicio" />
+        android:text=""
+        android:textSize="20dp" />
 
 
 </RelativeLayout>
