--- a/Camara2/app/src/main/res/values/arrays.xml
+++ b/Camara2/app/src/main/res/values/arrays.xml
@@ -11,14 +11,14 @@
         <item>20</item>
     </string-array>
     <string-array name="frecuencia_fotos">
-        <item>15s</item>
-        <item>30s</item>
         <item>1min</item>
+        <item>2min</item>
+        <item>3min</item>
     </string-array>
     <string-array name="frecuencia_fotos_values">
-        <item>15</item>
-        <item>30</item>
         <item>60</item>
+        <item>120</item>
+        <item>180</item>
     </string-array>
     <string-array name="memoria">
         <item>16GB</item>
@@ -26,9 +26,9 @@
         <item>4GB</item>
     </string-array>
     <string-array name="memoria_values">
-        <item>16GB</item>
-        <item>8GB</item>
-        <item>4GB</item>
+        <item>16</item>
+        <item>8</item>
+        <item>4</item>
     </string-array>
     <string-array name="calidad_foto">
         <item>Alta</item>
