--- a/Timelapse/app/src/main/res/layout/activity_main.xml
+++ b/Timelapse/app/src/main/res/layout/activity_main.xml
@@ -1,47 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?><!--
-  ~ Copyright 2016 Keval Patel.
-  ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License");
-  ~ you may not use this file except in compliance with the License.
-  ~ You may obtain a copy of the License at
-  ~
-  ~ http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~ Unless required by applicable law or agreed to in writing, software
-  ~ distributed under the License is distributed on an "AS IS" BASIS,
-  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~ See the License for the specific language governing permissions and
-  ~ limitations under the License.
-  -->
-
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-<<<<<<< HEAD:Timelapse/app/src/main/res/layout/activity_main.xml
     tools:context=".activities.MainActivity">
-=======
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".Activities.MainActivity">
->>>>>>> d5f6d3cbfcbbffe706cf45ac0299d8d0eeb67c62:Camara2/app/src/main/res/layout/activity_main.xml
 
     <Button
-        android:id="@+id/btn_using_service"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/title_button_service" />
-
-
-    <TextView
-        android:id="@+id/estado_servicio"
+        android:id="@+id/button_vincular_proyecto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-<<<<<<< HEAD:Timelapse/app/src/main/res/layout/activity_main.xml
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="30dp"
@@ -52,13 +20,6 @@
         android:paddingTop="15dp"
         android:text="VINCULAR A PROYECTO"
         android:textColor="@android:color/white"
-=======
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/btn_using_service"
-        android:layout_marginTop="48dp"
-        android:text=""
->>>>>>> d5f6d3cbfcbbffe706cf45ac0299d8d0eeb67c62:Camara2/app/src/main/res/layout/activity_main.xml
         android:textSize="20dp" />
-
 
 </RelativeLayout>
