--- a/Timelapse/app/src/main/res/menu/main.xml
+++ b/Timelapse/app/src/main/res/menu/main.xml
@@ -8,4 +8,10 @@
         android:title="@string/settings"
         app:showAsAction="always" />
 
+    <item
+        android:id="@+id/action_desvincular"
+        android:icon="@drawable/ic_desvincular"
+        android:title="@string/action_desvincular_proyecto"
+        app:showAsAction="always" />
+
 </menu>
