--- a/TimelapseLocal/app/src/main/res/values/styles.xml
+++ b/TimelapseLocal/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<!--
   ~ Copyright 2016 Keval Patel.
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -15,8 +15,13 @@
   -->
 
 <resources>
-    <color name="colorPrimary">#2D404E</color>
-    <color name="colorPrimaryDark">#253440</color>
-    <color name="colorAccent">#FF5252</color>
-    <color name="colorVerdeActivo">#31a638</color>
+
+    <!-- Base application theme. -->
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
 </resources>
