--- a/TimelapseLocal/app/src/main/res/layout/activity_main.xml
+++ b/TimelapseLocal/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#b2ebf2"
     tools:context=".activities.MainActivity">
 
     <Button
