--- a/TimelapseLocal/app/src/main/res/layout/activity_timelapse.xml
+++ b/TimelapseLocal/app/src/main/res/layout/activity_timelapse.xml
@@ -23,6 +23,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
+    android:background="#b2ebf2"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".activities.TimelapseActivity">
 
